iabem and jascome 2024

--- a/publications.html
+++ b/publications.html
@@ -59,6 +59,14 @@
 <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2024 </b> </h3>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>
+	<u><b>K. Tomoyasu</b></u>, <u><b>H. Kotani</b></u> and H. Isakari<br>
+	Calderon-preconditioned BEMs for frequency-differentiated boundary-value problems of Helmholtz' equation,<br>
+	計算数理工学論文集, Vol. 24, pp. 43-53, 2024, <a href="https://doi.org/10.60443/jascome.24.0_43">doi:10.60443/jascome.24.0_43</a><br>
+	<br>
+	松島慶, 山田崇恭, 飯盛浩司<br>
+	Nystr&ouml;m 法による境界積分方程式の離散化に基づく Helmholtz 方程式の解の周波数微分の数値計算,<br>
+	計算数理工学論文集, Vol. 24, pp. 107-113, 2024, <a href="https://doi.org/10.60443/jascome.24.0_107">doi:10.60443/jascome.24.0_107</a><br>
+	<br>
 	<u><b>Y. Honshuku</b></u> and H. Isakari<br>
 	BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
 	Journal of Computational Physics, Vol. 509, 113046 (20 pages), 2024, <a href="https://doi.org/10.1016/j.jcp.2024.113046">doi:10.1016/j.jcp.2024.113046</a>, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
@@ -124,7 +132,7 @@
 <!------------------------------------------------------------------------------------------------------------------>
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2023 </b> </h3>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>
-	Isakari H.<br>
+	H. Isakari<br>
 	A fast skeletonisation of 2D objects using a generalised double-layer potential and the H-matrix method,<br>
 	計算数理工学論文集, Vol. 23, pp. 115-121, 2023, <a href="https://doi.org/10.60443/jascome.23.0_115">doi:10.60443/jascome.23.0_115</a><br>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
@@ -184,7 +192,7 @@
 	<br>Pade近似を用いた音響透過率の角周波数平均の予測とそのトポロジー導関数
 	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
 	<br>
-	<br><u><b>Y. Honshuku</b></u> and Isakari H.
+	<br><u><b>Y. Honshuku</b></u> and H. Isakari
 	<br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures
 	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
 	<br>
