--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,7 @@
 	下記リストの<u><b>太字</b></u>は研究室所属学生または卒業生を表します<br>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
 	<br>Y. Matsumoto, <u><b>A. Yoshiki</b></u>, and H. Isakari<br>
-	Calderon-preconditioned boundary integral equations of the Burton-Miller type for transmission problems,<br>
+	Automatically well-conditioned collocation boundary element method for transmission problems based on the Burton-Miller formulation,<br>
 	2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>
 	<br>
 <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
