計算工学会

--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,25 @@
 	2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>
 	<br>
 <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+	<br><h3 class="heading", style="font-size: 18px;"> <b> 2025 </b> </h3>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br><u><b>安部貴心</b></u>, 飯盛浩司
+	<br>正規化された有理 RBF を用いたトポロジー最適化に関する基礎的研究
+	<br>第30回計算工学講演会, ソニックシティ (さいたま市), 2025年6月4日-6日.
+	<br>
+	<br><u><b>内田幸太郎</b></u>, 松本安弘, 飯盛浩司
+	<br>MR-FDS を用いた散乱問題の解の高階周波数感度解析
+	<br>第30回計算工学講演会, ソニックシティ (さいたま市), 2025年6月4日-6日.
+	<br>
+	<br><u><b>小谷晴</b></u>, 飯盛浩司
+	<br>FMM を用いた周波数導関数最小化による光学迷彩装置のトポロジー最適設計
+	<br>第30回計算工学講演会, ソニックシティ (さいたま市), 2025年6月4日-6日.
+	<br>
+	<br><u><b>友安恵吾</b></u>, 飯盛浩司
+	<br>transmission 問題に対する Burton−Miller 型境界要素法における Calderon の前処理のためのパラメータ設計アルゴリズム
+	<br>第30回計算工学講演会, ソニックシティ (さいたま市), 2025年6月4日-6日.
+	<br>
+<!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2024 </b> </h3>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>
 	<u><b>K. Tomoyasu</b></u>, <u><b>H. Kotani</b></u> and H. Isakari<br>
