--- a/isakari.html
+++ b/isakari.html
@@ -255,7 +255,7 @@ Engineering Analysis with Boundary Elements
 <br> 計算数理工学論文集
 <br> Computer Methods in Applied Mechanics and Engineering
 <br> 応用数理学会論文誌
-<br> 土木学会論文集(A2)
+<br> 土木学会論文集（A2）
 <br> Journal of Computational and Applied Research in Mechanical Engineering
 <br> Bulletin of the JSME (日本機械学会論文集)
 <br> IEICE Transactions on Electronics
@@ -269,6 +269,8 @@ Engineering Analysis with Boundary Elements
 <br> Japanese Journal of Applied Physics
 <br> 日本計算工学会論文集
 <br> Journal of Sound and Vibration
+<br> Engineering with Computers
+<br> SIAM Journal on Scientific Computing
 <br>
 
 <br>
