tomoyasu jascome award

--- a/publications.html
+++ b/publications.html
@@ -148,6 +148,9 @@
 	<br><u><b>利光陸</b></u>
 	<br>Best Presentation Award (Tokyo Tech., Keio Joint Seminar)
 	<br>
+	<br><u><b>友安恵吾</b></u>
+	<br>日本計算数理工学会講演賞
+	<br>
 <!------------------------------------------------------------------------------------------------------------------>
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2023 </b> </h3>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>
