--- a/members.html
+++ b/members.html
@@ -53,32 +53,37 @@
       <section class="content">
 	<h3 class="heading"> 現在のメンバー <br>Current members</h3>
 	<br>
-	<b>教員</b>
+	<b>准教授</b>
 	<br> <a href="isakari.html">飯盛浩司</a><br>
 	<br>
 	<b>M2</b>
 	<br>
-	利光陸<br>
-	井上友<br>
-	吉規晃弘<br>
-	<br>
-	<b>M1</b>
-	<br>
 	友安恵吾<br>
 	小谷晴<br>
-	安部貴心<br>
 	内田幸太郎<br>
+	安部貴心<br>
 	<br>
 	<b>B4</b>
+	<br>中曽根泰斗
+	<br>宮田琉聖
+	<br>大石田倖太
+	<br>蔵本陽向
 	<br>
-	山崎誠一郎<br>
-	奥田航平<br>
-	高橋真フランソア<br>
-	治田琉斗<br>
-	<br>
+	<br>	
 	<h3 class="heading"> 過去のメンバー <br>Alumni </h3>
 	<br>
 	<ol>
+	  <b>2024年度M修了</b><br>
+	  利光陸<br>
+	  吉規晃弘<br>
+	  井上友<br>
+	  <br>
+	  <b>2024年度B卒業</b><br>
+	  治田琉斗<br>
+	  高橋真フランソア<br>
+	  奥田航平<br>
+	  山崎誠一郎<br>
+	  <br>
 	  <b>2023年度B卒業</b><br>
 	  神田陽向<br>
 	  中野悠哉<br>
