--- a/publications.html
+++ b/publications.html
@@ -149,7 +149,10 @@
 	<br>Best Presentation Award (Tokyo Tech., Keio Joint Seminar)
 	<br>
 	<br><u><b>友安恵吾</b></u>
-	<br>日本計算数理工学会講演賞
+	<br><a href="https://www.jascome.org/paper/awards.html">日本計算数理工学会講演賞</a>
+	<br>
+	<br><u><b>高橋真フランソア</b></u>
+	<br>SD卒業研究優秀発表賞	
 	<br>
 <!------------------------------------------------------------------------------------------------------------------>
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2023 </b> </h3>
