--- a/publications.html
+++ b/publications.html
@@ -52,13 +52,41 @@
 	ここには2022年度以降の業績を記載しています。古いものを含む飯盛の完全な論文のリストは<a href="https://researchmap.jp/isakari">resarchmap</a>をご覧ください<br>
 	下記リストの<u><b>太字</b></u>は研究室所属学生または卒業生を表します<br>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
-	<br>Y. Matsumoto, <u><b>A. Yoshiki</b></u>, and H. Isakari<br>
+	<br><u><b>K. Tomoyasu</b></u>, H. Isakari<br>
+	Point Jacobi-type preconditioning and parameter tuning for Calderon-preconditioned Burton-Miller method in transmission problems,<br>
+	2025, <a href="https://arxiv.org/abs/2506.01440">arXiv:2506.01440</a>
+	<br>
+	<br>Y. Matsumoto, <u><b>A. Yoshiki</b></u>, H. Isakari<br>
 	Automatically well-conditioned collocation boundary element method for transmission problems based on the Burton-Miller formulation,<br>
 	2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>
 	<br>
-<!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+	<!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2025 </b> </h3>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
+	<br><u><b>K. Tomoyasu</b></u>, H. Isakari
+	<br>Efficient preconditioning techniques for the boundary element method with the Burton--Miller method in transmission problems
+	<br>47th PhotonIcs and Electromagnetics Research Symposium (PIERS2025), Makuhari Messe (Chiba), 2025年11月5日-9日.
+	<br>
+	<br><u><b>K. Okuda</b></u>, H. Isakari
+	<br>Estimating resonant frequency in open system via Padé-approximated resolvent
+	<br>47th PhotonIcs and Electromagnetics Research Symposium (PIERS2025), Makuhari Messe (Chiba), 2025年11月5日-9日.
+	<br>
+	<br><u><b>友安恵吾</b></u>, 飯盛浩司
+	<br>transmission 問題における Calderon の前処理を適用した Burton−Miller 型境界積分方程式に対する点 Jacobi 法 
+	<br>第38回計算力学講演会（CMD2025）, 信州大学工学部 (長野市), 2025年9月24日-26日.
+	<br>
+	<br><u><b>小谷晴</b></u>, 飯盛浩司
+	<br>高次形状表現を用いたクローキング構造のレベルセットトポロジー最適設計
+	<br>第38回計算力学講演会（CMD2025）, 信州大学工学部 (長野市), 2025年9月24日-26日.
+	<br>
+	<br><u><b>安部貴心</b></u>, 飯盛浩司
+	<br>CMA-ES を用いたボロノイ構造による平歯車の構造最適化
+	<br>第38回計算力学講演会（CMD2025）, 信州大学工学部 (長野市), 2025年9月24日-26日.
+	<br>
+	<br><u><b>友安恵吾</b></u>, 飯盛浩司
+	<br>高次の幾何表現を用いた選点法に基づく境界要素法
+	<br>M&M・CMD若手シンポジウム2025, KKRホテル名古屋 (名古屋市), 2025年8月27日-29日.
+	<br>
 	<br><u><b>安部貴心</b></u>, 飯盛浩司
 	<br>正規化された有理 RBF を用いたトポロジー最適化に関する基礎的研究
 	<br>第30回計算工学講演会, ソニックシティ (さいたま市), 2025年6月4日-6日.
@@ -74,6 +102,10 @@
 	<br><u><b>友安恵吾</b></u>, 飯盛浩司
 	<br>transmission 問題に対する Burton−Miller 型境界要素法における Calderon の前処理のためのパラメータ設計アルゴリズム
 	<br>第30回計算工学講演会, ソニックシティ (さいたま市), 2025年6月4日-6日.
+	<br>
+	<br><u><b>A. Yoshiki</b></u>, K. Matsushima, H. Isakari
+	<br>Omnidirectional acoustic cloaking for arbitrary materials and shapes
+	<br>The 16th World Congress of Structural and Multidisciplinary Optimization (WCSMO2025), Kobe Convention Centre (Kobe), 2025年5月18日-23日.
 	<br>
 <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2024 </b> </h3>
