--- a/publications.html
+++ b/publications.html
@@ -52,16 +52,21 @@
 	ここには2022年度以降の業績を記載しています。古いものを含む飯盛の完全な論文のリストは<a href="https://researchmap.jp/isakari">resarchmap</a>をご覧ください<br>
 	下記リストの<u><b>太字</b></u>は研究室所属学生または卒業生を表します<br>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>プレプリント</b> <br> <b>Preprints</b> </h2>
-	<br><u><b>K. Tomoyasu</b></u>, H. Isakari<br>
-	Point Jacobi-type preconditioning and parameter tuning for Calderon-preconditioned Burton-Miller method in transmission problems,<br>
-	2025, <a href="https://arxiv.org/abs/2506.01440">arXiv:2506.01440</a>
-	<br>
 	<br>Y. Matsumoto, <u><b>A. Yoshiki</b></u>, H. Isakari<br>
 	Automatically well-conditioned collocation boundary element method for transmission problems based on the Burton-Miller formulation,<br>
 	2023, <a href="https://arxiv.org/abs/2312.12787">arXiv:2312.12787</a>
 	<br>
 	<!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2025 </b> </h3>
+	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>	
+	<u><b>K. Tomoyasu</b></u>, H. Isakari<br>
+	Point Jacobi-type preconditioning and parameter tuning for Calderon-preconditioned Burton-Miller method in transmission problems,<br>
+	to appear in Engineering Analysis with Boundary elements, <a href="https://arxiv.org/abs/2506.01440">arXiv:2506.01440</a><br>
+	<br>
+	<u><b>H. Kotani</b></u>, H. Isakari<br>
+	High-order boundary element extraction from level sets for superparametric BEM-based topology optimization<br>
+	計算数理工学論文集, Vol. 25, pp. 181–189, 2024, <a href="https://doi.org/10.60443/jascome.25.0_181">doi:10.60443/jascome.25.0_181</a><br>
+	<br>	
 	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
 	<br><u><b>K. Tomoyasu</b></u>, H. Isakari
 	<br>Efficient preconditioning techniques for the boundary element method with the Burton--Miller method in transmission problems
@@ -110,7 +115,7 @@
 <!-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2024 </b> </h3>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>
-	<u><b>K. Tomoyasu</b></u>, <u><b>H. Kotani</b></u> and H. Isakari<br>
+	<u><b>K. Tomoyasu</b></u>, <u><b>H. Kotani</b></u>, H. Isakari<br>
 	Calderon-preconditioned BEMs for frequency-differentiated boundary-value problems of Helmholtz' equation,<br>
 	計算数理工学論文集, Vol. 24, pp. 43-53, 2024, <a href="https://doi.org/10.60443/jascome.24.0_43">doi:10.60443/jascome.24.0_43</a><br>
 	<br>
@@ -118,21 +123,21 @@
 	Nystr&ouml;m 法による境界積分方程式の離散化に基づく Helmholtz 方程式の解の周波数微分の数値計算,<br>
 	計算数理工学論文集, Vol. 24, pp. 107-113, 2024, <a href="https://doi.org/10.60443/jascome.24.0_107">doi:10.60443/jascome.24.0_107</a><br>
 	<br>
-	<u><b>Y. Honshuku</b></u> and H. Isakari<br>
+	<u><b>Y. Honshuku</b></u>, H. Isakari<br>
 	BEM-based fast frequency sweep for acoustic scattering by periodic slab,<br>
 	Journal of Computational Physics, Vol. 509, 113046 (20 pages), 2024, <a href="https://doi.org/10.1016/j.jcp.2024.113046">doi:10.1016/j.jcp.2024.113046</a>, <a href="https://arxiv.org/abs/2305.08474">arXiv:2305.08474</a>.
 	<br>
-	<br><u><b>R. Toshimitsu</b></u> and H. Isakari<br>
+	<br><u><b>R. Toshimitsu</b></u>, H. Isakari<br>
 	A Burton-Miller-type boundary element method based on a hybrid integral representation and its application to cavity scattering,<br>
 	Engineering Analysis with Boundary Elements, Vol. 158, pp. 303-312, 2024, <a href="https://doi.org/10.1016/j.enganabound.2023.11.003">doi:10.1016/j.enganabound.2023.11.003</a>, <a href="https://arxiv.org/abs/2305.15815">arXiv:2305.15815</a>
 	<br>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>学会発表</b> <br> <b>Conference contributions</b> </h2>
-	<br><u><b>R. Toshimitsu</b></u> and H. Isakari
+	<br><u><b>R. Toshimitsu</b></u>, H. Isakari
 	<br>Structural optimisation for acoustic cavity problems in half space using a hybrid boundary integral representation
 	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
 	<br>
 
-	<br><u><b>K. Tomoyasu</b></u> and H. Isakari
+	<br><u><b>K. Tomoyasu</b></u>, H. Isakari
 	<br>Performance evaluation of the Calderon preconditioning for the Burton–Miller boundary element method in three-dimensional transmission problems
 	<br>Symposium of the international association for boundary element methods (IABEM 2024), Hong Kong University of Science and Technology (Hong Kong), 2024年12月4日-6日.
 	<br>
@@ -208,23 +213,23 @@
 	<!------------------------------------------------------------------------------------------------------------------>
 	<br><h3 class="heading", style="font-size: 18px;"> <b> 2022 </b> </h3>
 	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2>
-	<br><b><u>Y. Honshuku</u></b> and H. Isakari
+	<br><b><u>Y. Honshuku</u></b>, H. Isakari
 	<br>A topology optimisation of acoustic devices based on the frequency response estimation with the Padé approximation
 	<br>Applied Mathematical Modelling, Vol. 110, pp. 819-840, 2022, <a href="https://doi.org/10.1016/j.apm.2022.06.020">doi:10.1016/j.apm.2022.06.020</a>, <a href="https://arxiv.org/abs/2111.12443">arXiv:2111.12443.</a>
 	<br>
-	<br><u><b>K. Matsushima</b></u>, H. Isakari, T. Takahashi, and T. Matsumoto
+	<br><u><b>K. Matsushima</b></u>, H. Isakari, T. Takahashi, T. Matsumoto
 	<br>A topology optimization of open acoustic waveguides based on a scattering matrix method
 	<br> Wave Motion, Vol. 113, p. 102987 (18pages), 2022, <a href="https://doi.org/10.1016/j.wavemoti.2022.102987">doi:10.1016/j.wavemoti.2022.102987</a>, <a href="https://arxiv.org/abs/2201.09533">arXiv:2201.09533.</a>
 	<br>
-	<br><u><b>J. Qin</b></u>, H. Isakari, T. Takahashi, and T. Matsumoto
+	<br><u><b>J. Qin</b></u>, H. Isakari, T. Takahashi, T. Matsumoto
 	<br>A robust topology optimisation for wideband structures in acoustic-elastodynamic coupled fields
 	<br>Engineering Analysis with Boundary Elements, Vol. 140, pp. 544-561, 2022, <a href="https://doi.org/10.1016/j.enganabound.2022.04.012">doi:10.1016/j.enganabound.2022.04.012</a>
 	<br>
-	<br>T. Takahashi, T. Hirai, H. Isakari, and T. Matsumoto
+	<br>T. Takahashi, T. Hirai, H. Isakari, T. Matsumoto
 	<br>An isogeometric boundary element method for three-dimensional doubly-periodic layered structures in electromagnetics
 	<br>Engineering Analysis with Boundary Elements, Vol. 136, pp. 37-54, 2022, <a href="https://doi.org/10.1016/j.enganabound.2021.11.020">doi:10.1016/j.enganabound.2021.11.020</a>
 	<br>
-	<br>T. Takahashi, D. Sato, H. Isakari, and T. Matsumoto	
+	<br>T. Takahashi, D. Sato, H. Isakari, T. Matsumoto	
 	<br>A shape optimisation with the isogeometric boundary element method and adjoint variable method for the three-dimensional Helmholtz equation
 	<br>Computer-Aided Design, Vol. 142, 103126 (17pages), 2022, <a href="https://doi.org/10.1016/j.cad.2021.103126">doi:10.1016/j.cad.2021.103126</a>
 	<br>
@@ -249,15 +254,15 @@
 	<br>Pade近似を用いた音響透過率の角周波数平均の予測とそのトポロジー導関数
 	<br>第35回計算力学講演会, オンライン, 2022年11月16日-18日.
 	<br>
-	<br><u><b>Y. Honshuku</b></u> and H. Isakari
+	<br><u><b>Y. Honshuku</b></u>, H. Isakari
 	<br>A boundary element method for evaluating high-order frequency derivatives of acoustic wave scattering by periodic structures
 	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
 	<br>
-	<br>S. Sato, T. Takahashi. H. Isakari, and T> Matsumoto
+	<br>S. Sato, T. Takahashi. H. Isakari, T. Matsumoto
 	<br>Topology optimization based on level set method of heat conduction for the heat radiation boundary condition.
 	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
 	<br>
-	<br>D. Ishida, T. Takahashi, Y. Cui, H. Isakari, and T. Matsumoto
+	<br>D. Ishida, T. Takahashi, Y. Cui, H. Isakari, T. Matsumoto
 	<br>A convolutional neural network for predicting the eigenvalues of the 2D Helmholtz equation
 	<br>WCCM-XV/APCOM-VIII, Yokohama (virtual), 2022年7月31日-8月5日.
 	<br>
