--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
 	<br><h2 class="heading", style="font-size: 18px;"> <b>原著論文</b> <br> <b>Journal papers</b> </h2><br>	
 	<u><b>K. Tomoyasu</b></u>, H. Isakari<br>
 	Point Jacobi-type preconditioning and parameter tuning for Calderon-preconditioned Burton-Miller method in transmission problems,<br>
-	to appear in Engineering Analysis with Boundary elements, <a href="https://arxiv.org/abs/2506.01440">arXiv:2506.01440</a><br>
+	Engineering Analysis with Boundary Elements, Vol. 183, 106572, 2026, <a href="https://doi.org/10.1016/j.enganabound.2025.106572">doi:10.1016/j.enganabound.2025.106572</a>, <a href="https://arxiv.org/abs/2506.01440">arXiv:2506.01440</a><br>
 	<br>
 	<u><b>H. Kotani</b></u>, H. Isakari<br>
 	High-order boundary element extraction from level sets for superparametric BEM-based topology optimization<br>
